Add DogeSmartX Agent - Modular DeFi Cross-Chain Swap Assistant
 Features:
- Bidirectional ETH  DOGE cross-chain swaps
- Hashlock/timelock atomic swap security
- Onchain execution with testnet deployment
- Partial fills for better liquidity
- Community features with Dogecoin spirit
- Charity integration (0.1% fee to good causes)
- Modular architecture for scalability
- Comprehensive error handling and debugging

 Architecture:
- Service-based modular design
- Type-safe Pydantic data models
- Environment-based configuration
- Professional error handling
- Debug mode with detailed logging

 Ready for cross-chain DeFi magic!
Much technology, such secure, very scalable!

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@
 
 # But don't ignore this .gitignore file itself
 !.gitignore
+
+# Don't ignore DogeSmartX agent files
+!app/
+!app/agent/
+!app/agent/dogesmartx.py
+!app/agent/dogesmartx/
+!app/agent/dogesmartx/**
+!app/agent/dogesmartx_original.py
+
+# Don't ignore essential project files
+!README.md
+!LICENSE*
+!requirements.txt
+!setup.py
+!main.py
