--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 !app/agent/dogesmartx_original.py
 
 # Don't ignore essential project files
-!README.md
+!DOGESMARTX_README.md
 !LICENSE*
 !requirements.txt
 !setup.py
