Make DogeSmartX README the main project README
- Renamed DOGESMARTX_README.md  README.md as main repository documentation
- Updated .gitignore to track the new main README.md
- DogeSmartX documentation now serves as the primary project README
- Much main, very documentation, such wow!

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 !app/agent/dogesmartx_original.py
 
 # Don't ignore essential project files
-!DOGESMARTX_README.md
+!README.md
 !LICENSE*
 !requirements.txt
 !setup.py
