--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,30 @@
 !setup.py
 !main.py
 
+# Ignore Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
 # Ignore Cline configuration (contains sensitive data)
 .cline/
