feat: Add Dogechain wallet integration for DOGE storage and management
- Introduced DogechainWallet class for handling DOGE transactions on Dogechain Testnet.
- Updated DogeSmartXWallet to initialize and utilize Dogechain wallet.
- Enhanced SwapRequest model to include optional conditions.
- Implemented secure private key handling with environment variable support.
- Added methods for DOGE balance retrieval, swap history management, and DOGE transfers.
- Improved logging for wallet operations and transaction statuses.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ MANIFEST
 
 # Ignore Cline configuration (contains sensitive data)
 .cline/
+
+# Ignore wallet files (contain sensitive data)
+*wallet*.json
+*.wallet
+dogechain_wallet.json
+dogechain_wallet.json.backup
+*.private_key
